	added test for mdb_sql_run_query and code to use it if it's there
	fixed a bug that caused ping to fail after reconnecting to sybase
	added configure test for xsubpp
	fixed perl dbi inout bind problem
	fixed code that was adding a NULL terminator to oracle clob values
	applied several patches from Renat Sabitov
	applied dynamic cursor patch from Cal Heldenbrand

0.41 - added configure test for ruby.h
	added a couple of new functions to the mysql drop-in library
	updated mysql drop-in lib docs explaining how to use with PHP
	added documentation for timequeries params
	if SQLConnectW isn't supported, ODBC driver uses non-unicode calls
	added maxsessioncount parameter and connections use it to override
		ttl and bleed off
	applied Renat Sabitov's output bind patch
	added mysql last_insert_id() note to FAQ

0.40 - fixed readline detection in configure script
	fixed an uninitialized variable in sqlr-import
	changed clientSession() to call endSessionCommand()
		instead of endSession() so endSessionInternal() would be called
		every time
	fixed debug option in sqlr-import and sqlr-export
	fixed postgresql typemangling=no option
	set dbversion to unknown if sp_version wasn't found in freetds/sybase
	output bind variables' null indicator is reset now
	updated postgresql typemangling
	included Jesse Wagner's oracle 11g acsite patch
	added +1 to inbindvars[i].valuesize for CLOB's to make sure the NULL
		terminator is included
	postgresql connection uses PQparameterStatus if PQserverVersion doesn't
		exist and runs "select version()" if PQparameterStatus doesn't
		exist; to get the db version
	added mysql-5.1 drop-in replacement lib
	fixed a bug that caused result set data not to be cleaned up before
		a cursor is reused as a bind cursor
	changed string bind length to uint32_t from uint16_t
	added clearBinds() call after executeQuery() in perl dbi driver
	began work on an ODBC driver
	added serverVersion and clientVersion methods