@@ -94,3 +94,4 @@ Fixes/Patches incorporated from:
 	Stephan van Egmond
 	mingang@taobao.com
 	Cal Heldenbrand
+	Claudio Friere
