@@ -4,6 +4,7 @@
 #include <config.h>
 #include <sqlrconnection.h>
 #include <rudiments/file.h>
+#include <rudiments/process.h>
 
 sqlrconnection_svr::~sqlrconnection_svr() {
 
@@ -41,7 +42,9 @@ sqlrconnection_svr::~sqlrconnection_svr() {
 	delete bindpool;
 	dbgfile.debugPrint("connection",0,"done deleting bindpool");
 
+printf("%d dtor called\n",process::getProcessId());
 	if (pidfile) {
+printf("removing\n");
 		file::remove(pidfile);
 		delete[] pidfile;
 	}
