@@ -21,15 +21,6 @@
 		</connections>
 	</instance>
 
-	<instance id="mysqltest" port="8006" socket="/tmp/mysqltest.socket" dbase="mysql" connections="1" maxconnections="3" maxqueuelength="5" growby="1" ttl="60" endofsession="commit" sessiontimeout="600" runasuser="nobody" runasgroup="nobody" cursors="5" authtier="listener" handoff="pass" deniedips="" allowedips="" debug="none">
-		<users>
-			<user user="mysqltest" password="mysqltest"/>
-		</users>
-		<connections>
-			<connection connectionid="db" string="user=testuser;password=testpassword;db=testdb;socket=/var/lib/mysql/mysql.sock;fakebinds=yes" metric="6"/>
-		</connections>
-	</instance>
-
 	<instance id="mysql3test" port="8006" socket="/tmp/mysql3test.socket" dbase="mysql" connections="3" maxconnections="3" maxqueuelength="5" growby="1" ttl="60" endofsession="commit" sessiontimeout="600" runasuser="nobody" runasgroup="nobody" cursors="5" authtier="listener" handoff="pass" deniedips="" allowedips="" debug="none">
 		<users>
 			<user user="mysql3test" password="mysql3test"/>
