@@ -16,6 +16,7 @@
 	fixed code that was adding a NULL terminator to oracle clob values
 	applied several patches from Renat Sabitov
 	applied dynamic cursor patch from Cal Heldenbrand
+	applied Claudio Freire's normalized matching and xmlparsing patches
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
